added scrolling to order list in order view

--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block head %}
+<style>
+div {
+    position: relative;
+    overflow-y: scroll;
+}
+</style>
+{% endblock %}
+
 {% block navbar %}
     {% include 'employee_navbar_include.html' %}
 {% endblock %}
@@ -12,23 +21,26 @@
             <div class="row">
                 <h3>Order</h3>
             </div>
-            <div class="row">
+            <div class="row"  positon="relative" style="height: 325px;">
                 <ul class="list-group">
 
                     {% for item in ordered_items_list %}
-                    {% if item.sent %}
-                    <li class="list-group-item list-group-item-warning">Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }}<span class="glyphicon glyphicon-ok-circle pull-right"></span></li>
-                    {% else %}
-                    <li class="list-group-item list-group-item-success">Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }} <a class="glyphicon glyphicon-remove pull-right" href="{% url 'remove_item' item.pk table_pk seat_number current_menu.pk %}"></a></li>
-                    {% endif %}
+                        {% if item.sent %}
+                            <li class="list-group-item list-group-item-warning">Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }}<span class="glyphicon glyphicon-ok-circle pull-right"></span></li>
+                        {% else %}
+                            <li class="list-group-item list-group-item-success">Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }} <a class="glyphicon glyphicon-remove pull-right" href="{% url 'remove_item' item.pk table_pk seat_number current_menu.pk %}"></a></li>
+                        {% endif %}
                     {% endfor %}
                 </ul>
-                <br><br>
+
+            </div>
+            <div class="row">
+                <br>
                 <b>Order Total: {{ ticket_total }}</b>
-                <br><br>
+                <br>
                 {% if current_table.sent %}
                 <a class="btn btn-lg btn-success" href="{% url 'submit_order' table_pk %}" name="submit">Send Order</a>
-                <br><br>
+                <br>
                 {% else %}
                 <a class="btn btn-lg btn-success" href="{% url 'submit_order' table_pk %}" name="submit">Send Order</a>
                 <br>
@@ -37,24 +49,24 @@
             </div>
         </div>
         <div class="col-sm-1">
-
+            <!-- spacer in between order list and menu -->
         </div>
         <div class="col-xs-8">
             <div class="row">
                 <h3>Table {{ table_number }} - <span class="label label-default">Seat {{ seat_number }}</span>
                 {% for seat in working_seats %}
-                {% if seat_number == seat %}
-                    <a class="btn btn-xs btn-success" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
+                    {% if seat_number == seat %}
+                        <a class="btn btn-xs btn-success" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
                     {% else %}
-                    <a class="btn btn-xs btn-default" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
-                {% endif %}
+                        <a class="btn btn-xs btn-default" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
+                    {% endif %}
                 {% endfor %}
                 <a class="btn btn-xs btn-primary" href="{% url 'add_seat' table_pk last_seat menu_pk %}">Add Seat</a>
                 {% for menu in menus_list %}
                     {% if menu == current_menu %}
-                    <a class="btn btn-warning btn-xs pull-right" href="{% url 'order_create_view' table_pk 1 menu.pk %}">{{ menu.name }}</a>
+                        <a class="btn btn-warning btn-xs pull-right" href="{% url 'order_create_view' table_pk 1 menu.pk %}">{{ menu.name }}</a>
                     {% else %}
-                    <a class="btn btn-default btn-xs pull-right" href="{% url 'order_create_view' table_pk 1 menu.pk %}">{{ menu.name }}</a>
+                        <a class="btn btn-default btn-xs pull-right" href="{% url 'order_create_view' table_pk 1 menu.pk %}">{{ menu.name }}</a>
                     {% endif %}
                 {% endfor %}
                 </h3>
